# vkr

./: Cargo.toml  blanki.docx  diplom.docx  flash.sh  plan.txt  poyasn.docx
.cargo/: config.toml
app/: Cargo.toml  flash.sh  memory.x
app/src/: main.rs
mik32-hal/: Cargo.toml  todo.txt
mik32-hal/examples/: adc.rs  blinky.rs  crc.rs  dac.rs  rtc.rs  serial.rs
mik32-hal/src/: adc.rs  clocks.rs  crc.rs  dac.rs  gpio.rs  lib.rs  prelude.rs  rtc.rs  serial.rs  time.rs
mik32-pac/: Cargo.toml  generate.sh  mik32.svd
mik32-pac/src/: adc.rs  boot_manager.rs  crc.rs  crypto.rs  dac0.rs  dac1.rs  dma.rs  eeprom_regs.rs  epic.rs  generic.rs  gpio_1.rs  gpio_irq.rs  i2c_1.rs  lib.rs  otp.rs  pad_config.rs  pm.rs  pvd_avcc.rs  refv_config.rs  rtc.rs  scr1_timer.rs  spi_0.rs  spifi_config.rs  timer16_2.rs  timer32_0.rs  timer32_2.rs  tsens.rs  usart_1.rs  wake_up.rs  wdt.rs  wdt_bus.rs
mik32-pac/src/adc/: adc_config.rs  adc_continuous.rs  adc_single.rs  adc_valid.rs  adc_value.rs
mik32-pac/src/boot_manager/: boot.rs
mik32-pac/src/crc/: ctrl.rs  data.rs  poly.rs
mik32-pac/src/crypto/: block.rs  config.rs  init.rs  key.rs
mik32-pac/src/dac0/: dac0_cfg.rs  dac0_value.rs
mik32-pac/src/dac1/: dac1_cfg.rs  dac1_value.rs
mik32-pac/src/dma/: ch1_cfg.rs  ch1_dst.rs  ch1_len.rs  ch1_src.rs  ch2_cfg.rs  ch2_dst.rs  ch2_len.rs  ch2_src.rs  ch3_cfg.rs  ch3_dst.rs  ch3_len.rs  ch3_src.rs  ch4_cfg.rs  ch4_dst.rs  ch4_len.rs  ch4_src.rs  config.rs  status.rs
mik32-pac/src/eeprom_regs/: eea.rs  eeadj.rs  eecon.rs  eedat.rs  eerb.rs  eesta.rs  ncycep1.rs  ncycep2.rs  ncycrl.rs
(+214 files in other folders)
