[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
panic-halt = "1.0.0"
riscv-rt = { version = "0.14.0", features = ["single-hart"] }
mik32-pac = { path = "../mik32-pac/" }
riscv = { version = "0.13.0", features = ["critical-section-single-hart"] }

[[bin]]
name = "app"
test = false
bench = false
