[package]
name = "mik32-pac"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
riscv = "0.13.0"
riscv-peripheral = "0.2.1"
riscv-rt = { version = "0.14.0", optional = true }
vcell = "0.1.3"

[features]
default = ["critical-section"]
critical-section = ["dep:critical-section"]
rt = ["riscv-rt"]
